Generate all inputs graphs and create the class to run multiple files at the same time